Update create account button link to new path

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
 
   <button class="btn btn-contact">Contact us</button>
   <div class="signup-text" onclick="window.location.href='create.html'">Sign up if you do not have an account with us</div>
-  <button class="btn btn-create" onclick="window.location.href='create.html'">Create a free account</button>
+  <button class="btn btn-create" onclick="window.location.href='create-account'">Create a free account</button>
 </div>
 
 <script>
