--- a/app/index.html
+++ b/app/index.html
@@ -5,29 +5,101 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sign In</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <style>
-  body { margin:0; font-family:'Segoe UI', sans-serif; background:#fff; color:#000; }
-  .container { max-width:400px; margin:auto; padding:20px; }
-  h1 { font-size:32px; margin-bottom:25px; }
-  label { font-size:14px; margin-bottom:6px; display:block; color:#333; }
-  .input-group { position:relative; margin-bottom:20px; }
-  .input-group i { position:absolute; left:12px; top:50%; transform:translateY(-50%); color:#c70404; }
-  .input-group input { width:100%; padding:12px 40px; border-radius:8px; border:1px solid #ccc; background:#f9f9f9; color:#000; font-size:14px; box-sizing:border-box; }
-  .btn { padding:14px; font-size:16px; border-radius:8px; border:none; cursor:pointer; margin-bottom:15px; box-sizing:border-box; }
-  .btn-signin { background:#01009C; color:#fff; font-weight:bold; flex:1; margin-right:10px; }
-  .btn-contact { background:#eee; color:#000; border:1px solid #ccc; width:100%; }
-  .btn-create { background:#eee; color:#000; border:1px solid #ccc; width:100%; }
-  .signup-text { text-align:center; font-size:14px; margin:20px 0 10px; color:#333; cursor:pointer; }
-  #responseBox { font-size:14px; margin-top:15px; padding:10px; border-radius:6px; background:#f4f4f4; color:#333; display:none; }
-  .btn-row { display:flex; align-items:center; }
-  .btn-fingerprint { background:#eee; border:1px solid #ccc; border-radius:8px; width:54px; height:44px; display:flex; align-items:center; justify-content:center; font-size:22px; cursor:pointer; display:none; }
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background: #fff;
+    color: #000;
+  }
+  .container {
+    max-width: 400px;
+    margin: auto;
+    padding: 20px;
+  }
+  h1 {
+    font-size: 32px;
+    margin-bottom: 25px;
+  }
+  label {
+    font-size: 14px;
+    margin-bottom: 6px;
+    display: block;
+    color: #333;
+  }
+  .input-group {
+    position: relative;
+    margin-bottom: 20px;
+  }
+  .input-group i {
+    position: absolute;
+    left: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #c70404;
+  }
+  .input-group input {
+    width: 100%;
+    padding: 12px 40px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    background: #f9f9f9;
+    color: #000;
+    font-size: 14px;
+    box-sizing: border-box;
+  }
+  .btn {
+    padding: 14px;
+    font-size: 16px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+  }
+  .btn-signin {
+    background: #01009C;
+    color: #fff;
+    font-weight: bold;
+    flex: 1;
+    margin-right: 10px;
+  }
+  .btn-contact, .btn-create {
+    background: #eee;
+    color: #000;
+    border: 1px solid #ccc;
+    width: 100%;
+  }
+  .signup-text {
+    text-align: center;
+    font-size: 14px;
+    margin: 20px 0 10px;
+    color: #333;
+    cursor: pointer;
+  }
+  .btn-row {
+    display: flex;
+    align-items: center;
+  }
+  .btn-fingerprint {
+    background: #eee;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    width: 54px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
+    cursor: pointer;
+  }
 </style>
 </head>
 <body>
 <div class="container" id="loginContainer">
   <h1>Sign in</h1>
-  <div id="responseBox"></div>
-  <br/>
   <label for="email">Email</label>
   <div class="input-group">
     <i class="fa fa-envelope"></i>
@@ -43,7 +115,7 @@
 
   <!-- Sign In + Fingerprint Row -->
   <div class="btn-row">
-    <button class="btn btn-signin" onclick="loginUser()">Sign in</button>
+    <button class="btn btn-signin" id="loginBtn" onclick="loginUser()">Sign in</button>
     <div class="btn-fingerprint" id="fingerBtn" onclick="callFingerprint()">
       <i class="fa fa-fingerprint"></i>
     </div>
@@ -55,6 +127,21 @@
 </div>
 
 <script>
+// ✅ Browser Fingerprint Generator
+async function getDeviceFingerprint() {
+  const data = [
+    navigator.userAgent,
+    navigator.language,
+    screen.width,
+    screen.height,
+    navigator.hardwareConcurrency,
+    navigator.platform
+  ].join('-');
+  const hashBuffer = await crypto.subtle.digest('SHA-256', new TextEncoder().encode(data));
+  return Array.from(new Uint8Array(hashBuffer)).map(b => b.toString(16).padStart(2, '0')).join('');
+}
+
+// ✅ On Page Load
 window.onload = function() {
   const fingerprintEnabled = localStorage.getItem("fingerprintEnabled");
   const user = localStorage.getItem("user");
@@ -62,96 +149,107 @@ window.onload = function() {
   const emailField = document.getElementById("username");
 
   if (fingerprintEnabled === "true") {
-    // ✅ Show fingerprint button
     fingerBtn.style.display = "flex";
-
-    // ✅ Prefill email if saved
     try {
       const parsedUser = JSON.parse(user);
-      if (parsedUser && parsedUser.email) {
-        emailField.value = parsedUser.email;
-      }
+      if (parsedUser && parsedUser.email) emailField.value = parsedUser.email;
     } catch(e) {}
   } else {
-    // ✅ First visit → hide fingerprint
     fingerBtn.style.display = "none";
   }
 };
 
-function loginUser() {
+// ✅ Toastify Helper
+function showToast(message, color="#01009C", icon="fa-solid fa-circle-info") {
+  Toastify({
+    text: ` <i class="${icon}"></i> ${message}`,
+    duration: 3000,
+    gravity: "top",
+    position: "center",
+    stopOnFocus: true,
+    close: true,
+    escapeMarkup: false,
+    style: {
+      background: color,
+      borderRadius: "12px",
+      display: "flex",
+      alignItems: "center",
+      gap: "10px"
+    }
+  }).showToast();
+}
+
+// ✅ Login User
+async function loginUser() {
   const username = document.getElementById("username").value.trim();
   const password = document.getElementById("password").value.trim();
-  const responseBox = document.getElementById("responseBox");
+  const loginBtn = document.getElementById("loginBtn");
 
   if (!username || !password) {
-    responseBox.style.display="block";
-    responseBox.style.color="red";
-    responseBox.textContent="Please enter both username and password.";
+    showToast("Please enter both username and password.", "#c70404", "fa-solid fa-exclamation-circle");
     return;
   }
 
-  responseBox.style.display="block";
-  responseBox.style.color="#333";
-  responseBox.textContent="⏳ Logging in...";
+  loginBtn.textContent = "Logging...";
+  loginBtn.disabled = true;
+
+  const fingerprint = await getDeviceFingerprint();
 
   fetch("https://datapaddy.com.ng/api/login", {
-    method:"POST",
-    headers:{"Content-Type":"application/json","Accept":"application/json"},
-    body:JSON.stringify({login:username,password:password})
+    method: "POST",
+    headers: {"Content-Type": "application/json","Accept": "application/json"},
+    body: JSON.stringify({ login: username, password: password, fingerprint })
   })
-  .then(res=>res.json())
-  .then(data=>{
-    responseBox.style.display="block";
-    responseBox.textContent=data.message||"Unknown response";
-    if(data.status){
-      localStorage.setItem("token",data.token);
-      localStorage.setItem("user",JSON.stringify(data.user));
-      localStorage.setItem("fingerprintEnabled","true");
+  .then(res => res.json())
+  .then(data => {
+    if (data.status) {
+      localStorage.setItem("token", data.token);
+      localStorage.setItem("user", JSON.stringify(data.user));
+      localStorage.setItem("fingerprintEnabled", "true");
 
-      if (typeof Android !== "undefined" && Android.setFingerprintEnabled) {
-        Android.setFingerprintEnabled(true);
-      }
+      showToast("Welcome back, Chief 👑", "#00C853", "fa-solid fa-check-circle");
 
-      if(typeof NativeNotify!=="undefined") {
-        NativeNotify.showNotification("Datapaddy","Welcome Back, Chief");
-      }
-
-      setTimeout(()=>{ window.location.href="dashboard"; },1500);
+      setTimeout(() => { window.location.href = "dashboard"; }, 1500);
     } else {
-      responseBox.style.color="red";
+      showToast(data.message || "Invalid login details.", "#c70404", "fa-solid fa-times-circle");
     }
   })
-  .catch(err=>{
-    responseBox.style.color="red";
-    responseBox.textContent="Error: "+err;
+  .catch(err => {
+    showToast("Error: " + err.message, "#c70404", "fa-solid fa-bug");
+  })
+  .finally(() => {
+    loginBtn.textContent = "Sign in";
+    loginBtn.disabled = false;
   });
 }
 
-function callFingerprint() {
-  if (typeof Android !== "undefined" && Android.triggerFingerprint) {
-    Android.triggerFingerprint();
+// ✅ Fingerprint Quick Login
+async function callFingerprint() {
+  const fingerprint = await getDeviceFingerprint();
+  const savedUser = JSON.parse(localStorage.getItem("user") || "{}");
+
+  if (fingerprint && savedUser.email) {
+    showToast("Fingerprint matched ✅ Logging in...", "#00C853", "fa-solid fa-fingerprint");
+    setTimeout(() => { window.location.href = "dashboard"; }, 1200);
+  } else {
+    showToast("No fingerprint data found. Please sign in normally.", "#c70404", "fa-solid fa-exclamation-triangle");
   }
 }
 
-// disable inspect
-document.addEventListener('contextmenu',e=>e.preventDefault());
-['copy','cut','paste','selectstart'].forEach(evt=>document.addEventListener(evt,e=>e.preventDefault()));
-document.addEventListener('keydown',e=>{if(e.ctrlKey&&['u','s','a'].includes(e.key))e.preventDefault();});
-
-// connection check
-function checkConnection(){ if(!navigator.onLine) window.location.href="connection.html"; }
-window.addEventListener("load",checkConnection);
-window.addEventListener("online",checkConnection);
-window.addEventListener("offline",checkConnection);
-
-// native click sounds
-document.addEventListener("DOMContentLoaded",()=>{
-  document.querySelectorAll("button, .forgot-pass, .signup-text").forEach(el=>{
-    el.addEventListener("click",()=>{
-      if(typeof NativeSound!=="undefined"&&NativeSound.playClick) NativeSound.playClick();
-    });
-  });
+// ✅ Block Inspect / Copy / Paste
+document.addEventListener('contextmenu', e => e.preventDefault());
+['copy', 'cut', 'paste', 'selectstart'].forEach(evt => document.addEventListener(evt, e => e.preventDefault()));
+document.addEventListener('keydown', e => {
+  if (e.ctrlKey && ['u', 's', 'a'].includes(e.key)) e.preventDefault();
 });
+
+// ✅ Connection Checker
+function checkConnection() {
+  if (!navigator.onLine) window.location.href = "connection.html";
+}
+window.addEventListener("load", checkConnection);
+window.addEventListener("online", checkConnection);
+window.addEventListener("offline", checkConnection);
 </script>
 </body>
-  </html>
+</html>
