--- a/app/index.html
+++ b/app/index.html
@@ -19,8 +19,9 @@
   .input-group { position:relative; margin-bottom:20px; }
   .input-group i { position:absolute; left:12px; top:50%; transform:translateY(-50%); color:#c70404; }
   .input-group input { width:100%; padding:12px 40px; border-radius:8px; border:1px solid #ccc; background:#f9f9f9; color:#000; font-size:14px; box-sizing:border-box; }
-  .btn { padding:14px; font-size:16px; border-radius:8px; border:none; cursor:pointer; box-sizing:border-box; width:100%; margin-bottom:10px; }
+  .btn { padding:14px; font-size:16px; border-radius:8px; border:none; cursor:pointer; box-sizing:border-box; width:100%; margin-bottom:10px; transition:0.3s; }
   .btn-signin { background:#01009C; color:#fff; font-weight:bold; }
+  .btn-signin:disabled { opacity:0.6; cursor:not-allowed; }
   .btn-contact, .btn-create { background:#eee; color:#000; border:1px solid #ccc; }
   .signup-text { text-align:center; font-size:14px; margin:15px 0 10px; color:#333; cursor:pointer; }
 </style>
@@ -45,7 +46,7 @@
   <div class="forgot-pass" onclick="window.location.href='forget.html'" style="color:#01009C; font-size:13px; cursor:pointer;">Forgot password?</div>
   <br>
 
-  <button class="btn btn-signin" onclick="loginUser()">Sign in</button>
+  <button class="btn btn-signin" id="signinBtn" onclick="loginUser()">Sign in</button>
   <button class="btn btn-contact" onclick="window.location.href='contact.html'">Contact us</button>
   <div class="signup-text" onclick="window.location.href='create.html'">Sign up if you do not have an account with us</div>
   <button class="btn btn-create" onclick="window.location.href='create.html'">Create a free account</button>
@@ -96,6 +97,7 @@ function showToast(message, type = "info") {
 function loginUser() {
   const username = document.getElementById("username").value.trim();
   const password = document.getElementById("password").value.trim();
+  const signinBtn = document.getElementById("signinBtn");
 
   if (!navigator.onLine) {
     showToast("No Internet Connection", "error");
@@ -107,7 +109,9 @@ function loginUser() {
     return;
   }
 
-  showToast("Logging in...", "info");
+  // Disable button and change text
+  signinBtn.textContent = "Logging in...";
+  signinBtn.disabled = true;
 
   fetch("https://datapaddy.com.ng/api/login", {
     method: "POST",
@@ -117,15 +121,21 @@ function loginUser() {
   .then(res => res.json())
   .then(data => {
     if (data.status) {
-      showToast("Welcome Back!", "success");
       localStorage.setItem("token", data.token);
       localStorage.setItem("user", JSON.stringify(data.user));
+      showToast("Welcome Back!", "success");
       setTimeout(() => window.location.href = "/app/dashboard", 800);
     } else {
+      signinBtn.textContent = "Sign in";
+      signinBtn.disabled = false;
       showToast(data.message || "Login failed.", "error");
     }
   })
-  .catch(err => showToast("Error: " + err.message, "error"));
+  .catch(err => {
+    signinBtn.textContent = "Sign in";
+    signinBtn.disabled = false;
+    showToast("Error: " + err.message, "error");
+  });
 }
 
 // Disable inspect / copy
