--- a/app/index.html
+++ b/app/index.html
@@ -43,13 +43,13 @@
     <input type="password" id="password" placeholder="********">
   </div>
 
-  <div class="forgot-pass" onclick="window.location.href='forget.html'" style="color:#01009C; font-size:13px; cursor:pointer;">Forgot password?</div>
+  <div class="forgot-pass" onclick="window.location.href='forget-password'" style="color:#01009C; font-size:13px; cursor:pointer;">Forgot password?</div>
   <br>
 
   <button class="btn btn-signin" id="signinBtn" onclick="loginUser()">Sign in</button>
-  <button class="btn btn-contact" onclick="window.location.href='contact.html'">Contact us</button>
+  <button class="btn btn-contact" onclick="window.location.href='support-page'">Contact us</button>
   <div class="signup-text" onclick="window.location.href='create.html'">Sign up if you do not have an account with us</div>
-  <button class="btn btn-create" onclick="window.location.href='create.html'">Create a free account</button>
+  <button class="btn btn-create" onclick="window.location.href='create-account'">Create a free account</button>
 </div>
 
 <script>
